# CodeRenew

./: .gitignore  README.md  clear_github_backend.js  clear_github_tokens.js  eslint.config.js  index.html  package-lock.json  package.json  quick_test.py  renameMain.cjs  test_conversion.py  tsconfig.electron.json  tsconfig.json  vite.config.build.ts  vite.config.ts
.github/workflows/: ci.yml
backend/: api.py  api_save.py  clone_convert.py  coderenew.db  database.py  knowledge_graph.py  recovery_loop.py  repo_audit.py  requirements.txt  security_check.py  translate.py
backend/api_manager/: Cargo.toml  readme.md
backend/api_manager/src/: main.rs
backend/test/test1_res/: age.py
backend/test/test1_src/: age.py
backend/tests/: conftest.py  test_api_smoke.py
dist-electron/: main.cjs  preload.js
electron/: main.ts  preload.ts
public/: lcm_iconmac.icns
src/: App.tsx
src/components/: ApiHealthBadge.tsx  ChatBot.tsx  CloneConvert.tsx  CodeWorkspace.tsx  Dashboard.tsx  FileSecurityScan.tsx  KnowledgeGraph.tsx  Layout.tsx  RecoveryLoop.tsx  RepoSecurityAudit.tsx  SecurityScanner.tsx  Settings.tsx  Sidebar.tsx  SummaryReport.tsx
src/context/: AppContext.tsx
src/lib/: exportUtils.ts  utils.test.ts
src/pages/: Index.tsx
