[package]
name = "api_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
keyring = { version="3.6.2", features = ["linux-native-sync-persistent", "sync-secret-service", "crypto-rust"] }
chacha20poly1305 = "0.10"
dirs = "6.0.0"
rand = "0.9.2"
base64 = "0.22.1"